# Agentic-AI-Workshop

./: Prompting.ipynb  RAG.ipynb  README.md  pyproject.toml  requirements.txt
Notebooks/: Prompting.ipynb
Notebooks/MCP/: mcp_client.py  mcp_server.py
Notebooks/MCP/core/: __init__.py  prompts.py  recipe.py  resources.py  tools.py
Notebooks/MCP/documents/: American Smash Burger.json  Cheesy Chicken Noodle Bowl.json  Hot Dog American.json  Margherita-Pizza.json  Risotto-alla-Milanese.json  Spaghetti-alla-Carbonara.json
