[project]
name = "agentic-ai-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "jupyterlab>=4.5.2",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "notebook>=7.5.2",
    "rank-bm25>=0.2.2",
]
